# neurohackathon2026

./: .env.example  .gitignore  CHECKLIST.md  HONESTY.md  LICENSE  PREREQUISITES.md  PROJECT_CONTEXT.md  README.md  app.json  package-lock.json  package.json  pyproject.toml  todo.md
backend/: .gitignore  conftest.py  demo_dementia.py  requirements.txt  simulate_continual.py
backend/ml/: __init__.py  continual.py  datasets.py  embedder.py  head.py  store.py
backend/tests/: test_continual.py  test_ml.py
data/: README.md  interp_trajectory_sub037_sub001.npz
docs/: CHECKLIST.md
pipeline/: band_power.py  controller.py  daemon.py  embedding.py  projector.py  stream.py
scripts/: compute_umap.py  continual_runner.py  decline_demo.py  dev.js  seed_eeg.py  seed_trajectory.py  simulate_neurodsp.py  transcribe.py
src/: types.ts
src/app/: _layout.tsx  checkin.tsx  demo.tsx  index.tsx
src/components/: AuraBlob.tsx  AuraBlob.web.tsx  AuraBlobView.tsx  AuraRing.tsx  AuraRing.web.tsx  AuraRingView.tsx  Avatar.tsx  BandPowerBars.tsx  Button.tsx  Card.tsx  EmbeddingGraph.tsx  EmbeddingMap.tsx  LabelReviewCard.tsx  LabelsReview.tsx  LanguageToggle.tsx  LineChart.tsx  LiveWaveform.tsx  LiveWaveform.web.tsx  LiveWaveformView.tsx  MessageThread.tsx  MetricTile.tsx  MicIcon.tsx  PatientBrainMap.tsx  SampleWave.tsx  Screen.tsx  SegmentLabeler.tsx  SkiaGraph.tsx  SkiaGraph.web.tsx  SkiaProvider.tsx  SkiaProvider.web.tsx  StatusPill.tsx  StatusRing.tsx  StreamControls.tsx  TextField.tsx  VitalCard.tsx  index.ts
src/hooks/: useEegSegments.ts  (+4 more)
supabase/: config.toml
(+29 files in other folders)
