[project]
name = "neurohackathon2026"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.10.9",
    "groq>=0.11.0",          # speech-to-text (whisper-large-v3) for voice notes
    "mne>=1.12.1",
    "neurodsp>=2.2.0",       # simulated EEG (sim_combined) for the streaming demo
    "neuroencoder>=1.0.1",   # EEG foundation model (pulls torch/timm/scikit-learn)
    "numpy>=2.4.6",
    "pylsl>=1.17.0",
    "python-dotenv>=1.2.2",
    "scipy>=1.14.0",
    "supabase>=2.31.0",
    "umap-learn>=0.5.12",
]
